fix: squares display on mobile and viewports

--- a/src/slices/HeroBanner/Container/styles.scss
+++ b/src/slices/HeroBanner/Container/styles.scss
@@ -4,8 +4,7 @@
     display: flex;
     justify-content: flex-end;
     position: relative;
-    height: 76vh;
-    max-height: 76vh;
+    height: 76svh;
     overflow: visible;
   }
   &--video-close-btn {
